# hatch-showcase

./: pyproject.toml
.github/workflows/: build.yml  test.yml
src/hatch_showcase/cli/: __init__.py
tests/: conftest.py
